implemented getObjectInfo, deleteObject, deleteObjects, changedFormat response for multupart/data
